fix icon alignment

--- a/packages/veritone-react-common/src/components/AppBar/styles.scss
+++ b/packages/veritone-react-common/src/components/AppBar/styles.scss
@@ -19,7 +19,6 @@
 }
 
 .appBar--iconGroup {
-  width: 170px;
   margin-left: auto;
   display: flex;
 }
